[package]
name = "pulse-stream"
version = "0.1.7"
edition = "2021"
description = "Stream Windows audio to PulseAudio"
build = "build.rs"

[dependencies]
iced = { version = "0.14", features = ["tokio"] }
iced_aw = { version = "0.9", default-features = false, features = ["icons"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "6"
flume = "0.12"
tray-icon = "0.22.0"

[target.'cfg(windows)'.dependencies]
windows-core = "0.62"
windows = { version = "0.62", features = [
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_Variant",
] }

[profile.release]
lto = true
strip = true
codegen-units = 1

[build-dependencies]
winresource = "0.1"
